<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Поиск банкоматов</string>
    <string name="app_desc">Поиск банкоматов</string>
    <string name="app_label">Поиск банкоматов</string>
    <string name="settings">Настройки</string>
    <string name="transfer_here">Переместиться</string>
    <string name="gps">GPS</string>
    <string name="fixed">фиксированные</string>
    <string name="location">Координаты</string>
    <string name="max_distance">Макс. расстояние</string>
    <string name="follow_the_link">Перейти по ссылке?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="no_restrictions">без ограничений</string>
    <string name="code_found">Найден код:</string>
    <string name="show_compass">Шкала компаса</string>
    <string name="show_map_horiz">Карта в горизонтальном положении</string>
    <string name="storage_path">/sdcard/CashpointViewer/1.1.0.0/</string>
    <string name="layers_collection_file">layers.xml</string>
    <string name="available_layers">Доступные слои</string>
    <string name="layers">Слои</string>
    <string name="set_up">Установить</string>
    <string name="about_app">О программе</string>
    <string name="version">версия</string>
    <string name="copyright"/>
    <string name="about_app_verbose">Поиск банкоматов.</string>
    <string name="exit">Выход</string>
    <string name="no_layers_found">Слои не найдены</string>
    <string name="debug_options_file">options.xml</string>
    <string name="show_map_key">Кнопка карта</string>
</resources>
