<ScrollView android:id="@+id/ScrollView01"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content" android:layout_height="wrap_content">
	<LinearLayout android:id="@+id/LinearLayout01"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:orientation="vertical" android:paddingLeft="6pt"
		android:paddingRight="6pt">
		<RadioGroup android:id="@+id/RadioGroup01"
			android:layout_width="wrap_content" android:layout_height="wrap_content">
			<TextView android:id="@+id/TextView01" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/location"
				android:textSize="10pt"></TextView>
			<RadioButton android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/RadioButtonLocationGPS"
				android:text="@string/gps" android:textSize="8pt"></RadioButton>
			<RadioButton android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/RadioButtonLocationFixed"
				android:text="@string/fixed" android:textSize="8pt"></RadioButton>
			<Button android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/ButtonSetUpLocation"
				android:text="@string/set_up"></Button>
		</RadioGroup>
		<View android:id="@+id/View01" android:layout_width="wrap_content"
			android:layout_height="2pt" android:background="#FF909090"></View>
		<TextView android:id="@+id/TextView02" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/max_distance"
			android:textSize="10pt" android:paddingTop="4pt"></TextView>
		<SeekBar android:layout_height="wrap_content" android:id="@+id/MaxDistanceSeek"
			android:layout_marginRight="5pt" android:layout_width="fill_parent"></SeekBar>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="1 km"
			android:textSize="8pt" android:id="@+id/MaxDistanceText"></TextView>
		<View android:id="@+id/View01" android:layout_width="wrap_content"
			android:layout_height="2pt" android:background="#FF909090"></View>
		<CheckBox android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/CheckBoxShowCompass"
			android:text="@string/show_compass" android:textSize="8pt"></CheckBox>
	<CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="8pt" android:id="@+id/CheckBoxShowMapHoriz" android:text="@string/show_map_horiz"></CheckBox>
<CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="8pt" android:text="@string/show_map_key" android:id="@+id/CheckBoxShowMapKey"></CheckBox>
</LinearLayout>
</ScrollView>